Fix breadcrups design on mobile screens

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -2476,7 +2476,7 @@ figure.fluidratio {
       clip-path: polygon(0% 0%, 0 0, 100% 50%, 0 100%, 0% 100%);
     }
     &:before{
-      left: -24px;
+      left: -23px;
       -webkit-clip-path: polygon(100% 0, 100% 50%, 100% 100%, 0% 100%, 100% 50%, 0% 0%);
       clip-path: polygon(100% 0, 100% 50%, 100% 100%, 0% 100%, 100% 50%, 0% 0%);
     }
